:bug: Fixed issue with line break in buttons

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -64,6 +64,7 @@ body {
   border-radius: 50px;
   font-size: 12px;
   letter-spacing: 0.5px;
+  white-space: nowrap;
 }
 
 .button:hover {
